# Personal-Document-Assistant-Demo

./: README.md  jarona.onnx  pyproject.toml  requirements.txt
models/SpeechToText/: jarona.tflite
pdva/: __init__.py  config.py  embedding_index.py  llm.py  rag.py  transcriber.py  tts.py  types.py  vision.py
pdva_store/: chroma.sqlite3
service/: app.py
tests/: diagnose_retrieval.py  realtest.py  speechrectest.py  test_week10_service.py  test_week4_index.py  test_week5_llm.py  test_week6_rag.py  test_week7_stt.py  test_week8_tts.py  test_week9_vision.py  texttospeechtest.py
ui/: streamlit_app.py
